--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.2"
+rocket_contrib = "0.4.2"
 diesel = { version = "1.0.0", features = ["postgres"] }
 dotenv = "0.14.1"
 r2d2 = "0.8.2"
 r2d2-diesel = "1.0.0"
-serde = "1.0.0"
-serde_derive = "1.0.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.0"
