--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 rocket = "0.4.2"
 rocket_contrib = "0.4.2"
+rocket_cors = "0.5.0"
 diesel = { version = "1.0.0", features = ["postgres"] }
 dotenv = "0.14.1"
 r2d2 = "0.8.2"
